# finances

./: .gitignore
backend/: Cargo.toml  docker-compose.yml
backend/postgresql/docker-entrypoint-initdb.d/: 0_init_schema.sql
backend/src/: main.rs  router.rs
backend/src/models/: company.rs
backend/src/stock/: handlers.rs  mod.rs  router.rs
backend/src/stock/data_fetcher/: mod.rs  nasdaq.rs  yahoo_finance.rs
backend/src/stock/data_fetcher/edgar/: cik.rs  edgar.rs
frontend/: .eslintrc.js  package-lock.json  package.json
