[package]
name = "finances"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
async-trait = "0.1.68"
axum = "0.6.18"
chrono = "0.4.26"
derive-getters = "0.3.0"
dotenvy = "0.15.7"
reqwest = { version = "0.11.18", features = ["serde_json", "json"] }
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
sqlx = { version = "0.7.2", features = ["runtime-tokio", "postgres"] }
tokio = { version = "1.28.2", features = ["macros", "rt-multi-thread"] }
fmp-rs = { path = "../../fmp-rs/" }
